
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
android:paddingLeft="50dp"
android:paddingRight="50dp"
android:paddingTop="10dp"
android:id="@+id/nombreRegistro">

<TextView
    android:text="@string/titulo_registro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textView3"
    android:textSize="40sp"
    android:textColor="@android:color/white"
    android:layout_marginTop="86dp"
    android:textAlignment="textStart"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:fontFamily="sans-serif"
    android:textStyle="normal|bold" />

<TextView
    android:text="@string/slogan_registro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textView5"
    android:layout_below="@+id/textView3"
    android:layout_alignParentStart="true"
    android:layout_marginStart="6dp"
    android:textSize="14sp"
    android:textColor="@android:color/white" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:ems="10"
    android:id="@+id/contraseñaRegistro"
    android:hint="@string/contrasena_registro"
    android:background="@android:color/background_light"
    android:padding="9dp"
    android:layout_marginTop="27dp"
    android:layout_below="@+id/emailRegistro"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:ems="10"
    android:id="@+id/emailRegistro"
    android:hint="@string/email_registro"
    android:background="@android:color/background_light"
    android:padding="9dp"
    android:layout_marginTop="29dp"
    android:layout_below="@+id/nombrecompleto"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:id="@+id/nombrecompleto"
    android:background="@android:color/background_light"
    android:hint="@string/nombre_y_apellido"
    android:padding="9dp"
    android:layout_marginTop="66dp"
    android:layout_below="@+id/textView5"
    android:layout_alignParentStart="true" />

<Button
    android:text="@string/registrar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/registrarBoton"
    android:background="@color/colorPrimaryDark"
    android:textColor="@android:color/background_light"
    android:layout_marginBottom="29dp"
    android:textStyle="normal|bold"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:onClick="Registrar"/>

</RelativeLayout>