<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
android:weightSum="1"
android:paddingLeft="50dp"
android:paddingRight="50dp"
android:paddingTop="10dp"
android:id="@+id/ingresoActivity">


<Button
    android:text="@string/ingresar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ingresarBoton"
    android:background="@color/colorPrimaryDark"
    android:textColor="@android:color/background_light"
    android:layout_above="@+id/restablecerTextView"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="14dp"
    android:onClick="Login"/>

<TextView
    android:text="@string/restablecer_contrasena"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/restablecerTextView"
    android:textAlignment="textStart"
    android:textColor="@android:color/background_light"
    android:layout_above="@+id/acceso_rapido"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="61dp"
    android:onClick="restablecerContraseña"/>

<TextView
    android:text="@string/acceso_rapido"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="104dp"
    android:id="@+id/acceso_rapido"
    android:textSize="24sp"
    android:textColor="@android:color/background_light"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:ems="10"
    android:id="@+id/emailIngreso"
    android:background="@android:color/background_light"
    android:textSize="18sp"
    android:textAlignment="textStart"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:padding="9dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:paddingEnd="0dp"
    android:paddingStart="0dp"
    android:hint="@string/email"
    android:layout_marginBottom="21dp"
    android:layout_above="@+id/passwordIngreso"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:ems="10"
    android:layout_marginBottom="19dp"
    android:id="@+id/passwordIngreso"
    android:background="@android:color/background_light"
    android:padding="9dp"
    android:hint="@string/contrasena"
    android:layout_above="@+id/ingresarBoton"
    android:layout_alignParentStart="true" />

    <com.facebook.login.widget.LoginButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/facebook_loginBoton"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/restablecerTextView"
        android:layout_alignParentStart="true" />

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/google_loginBoton"
        android:layout_below="@+id/facebook_loginBoton">

    </com.google.android.gms.common.SignInButton>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/progres_bar"
        />
    
    
</RelativeLayout>
