

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_presentacion"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="juniorvalerav.e15project.Presentacion"
android:background="@color/colorPrimary">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/titulo_principal"
    android:textAppearance="@android:style/TextAppearance.Medium"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:layout_marginBottom="122dp"
    android:textColor="@android:color/background_light"
    android:textAlignment="center"
    android:fontFamily="sans-serif-medium-light"
    android:layout_alignBottom="@+id/signin_boton"
    android:layout_alignParentStart="true" />

<Button
    android:text="@string/sign_in"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/signin_boton"
    android:layout_marginBottom="35dp"
    style="@android:style/Widget.Button"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="100dp"
    android:layout_above="@+id/signup_boton"
    android:layout_centerHorizontal="true"
    android:textColor="@color/colorPrimary"
    android:background="@android:color/background_light"
    android:onClick="ingresoActivity"
    />

<Button
    android:text="@string/sign_up"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/signup_boton"
    android:layout_marginBottom="90dp"
    style="@android:style/Widget.Button"
    tools:ignore="HardcodedText"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="100dp"
    android:textColor="@color/colorPrimary"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="@android:color/background_light"
    android:onClick="registroActivity"/>


</RelativeLayout>
